// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ladder filters out vehicles whose block is not active 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={-50}
      y2={-110}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-50)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-80}
        y2={-50}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t2
    </text>
  </svg>
</div>
`;

exports[`ladder highlights a selected vehicle 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={-50}
      y2={-110}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-50)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  selected"
        onClick={[Function]}
        transform="translate(63,-60)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-80}
        y2={-50}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-60}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t2
    </text>
  </svg>
</div>
`;

exports[`ladder renders a ladder 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={-50}
      y2={-110}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,-60)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-50)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            3
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="notimepoint"
        x1={-40}
        x2={-40}
        y1={-80}
        y2={0}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={0}
        y2={-50}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-60}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t2
    </text>
  </svg>
</div>
`;

exports[`ladder renders a ladder with no timepoints 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={0}
      />
    </g>
  </svg>
</div>
`;

exports[`ladder renders a reversed ladder 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={63}
      x2={40}
      y1={-60}
      y2={-56}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,-60)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-60}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t2
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t0
    </text>
  </svg>
</div>
`;

exports[`ladder renders an off-course vehicle 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <g>
      <g
        className="m-ladder__vehicle off-course "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8.5}
          >
            D
          </text>
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t2
    </text>
  </svg>
</div>
`;

exports[`ladder shows schedule line in the other direction 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -40 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={30}
      y2={-30}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,30)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-80}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-80}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-80}
        y2={30}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t2
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-80}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-80}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-80}
    >
      t0
    </text>
  </svg>
</div>
`;
